@@ -546,7 +546,7 @@ END_TEST
 
 
 			
-#define F(a,b) fail_unless(strcmp(c = imap_cleanup_address(a), b)==0, "[" a "] should have yielded [" b "] but got [%s]", c)
+#define F(a,b) fail_unless(strcmp(c = imap_cleanup_address(a), b)==0, "\n[" a "] should have yielded \n[" b "] but got \n[%s]", c)
 	
 START_TEST(test_imap_cleanup_address)
 {
@@ -558,6 +558,9 @@ START_TEST(test_imap_cleanup_address)
 	F("\"=?iso-8859-1?Q?B=BA_V._F._Z=EAzere?=\" <nobody@nowhere.org>","\"=?iso-8859-1?Q?B=BA_V._F._Z=EAzere?=\" <nobody@nowhere.org>");
 	F("Some One <some@foo.org>", "Some One <some@foo.org>");
 	F(" <some@foo.org>", "<some@foo.org>");
+	F("=?ISO-8859-2?Q? \"Verlag=20Dash=F6fer=20-=20DU.cz?= =?ISO-8859-2?Q?\" ?= <e-noviny@smtp.dashofer.cz>",
+	"\"=?ISO-8859-2?Q?Verlag=20Dash=F6fer=20-=20DU.cz?= =?ISO-8859-2?Q??=\" <e-noviny@smtp.dashofer.cz>");
+
 }
 END_TEST
 
