@@ -1,3 +1,10 @@
+2006-10-04  Paul J Stevens <paul@nfg.nl>
+
+	* debian/dbmail.init:
+	remove --posix switch and fix minor typos
+	* check_dbmail_imapd.c, misc.c:
+	add more cleanups to imap_clean_address (closes #377)
+
 2006-10-03  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail.conf, man/dbmail.conf.txt:
